Fix info-section content wrapping

--- a/src/assets/scss/dashboard.scss
+++ b/src/assets/scss/dashboard.scss
@@ -36,6 +36,7 @@
     display: flex;
     gap: 40px;
     justify-content: space-between;
+    flex-wrap: wrap;
     background: #FFFFFF;
     border-radius: 8px;
     padding: 24px 32px;
@@ -82,7 +83,7 @@
         display: flex;
         flex-direction: column;
         gap: 16px;
-        width: 858.08px;
+        width: fit-content;
     }
 
     &__series-text {
@@ -94,19 +95,17 @@
     &__series-group {
         display: flex;
         gap: 10px;
-        flex-wrap: wrap;
     }
 
     &__active-series {
         display: flex;
         gap: 4px;
         min-width: fit-content;
-        max-width: 400px;
         border: 1px solid #EFEFFF;
         border-radius: 8px;
-
-        &:nth-child(1) {
-            border: 1px solid #3B7EFF;
+        
+        &--blue-border {
+            border-color: #3B7EFF;
         }
     }
 
